--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 :root {
-  --Dark-Blue: hsl(240, 38%, 20%);
-  --Grayish-Blue: hsl(240, 18%, 77%);
+  --Dark-Blue: #202046;
+  --Grayish-Blue: #babacf;
 }
 
 * {
@@ -14,4 +14,98 @@
 html {
   font-size: 62.5%;
   font-family: "Inter", serif;
+}
+
+.carousel {
+  width: 100%;
+  overflow: hidden;
+  background: url('./images/pattern-curve.svg') no-repeat;
+  background-position: left bottom;
+  background-size: 20rem;
+  height: 100vh;
+}
+
+.carousel-inner {
+  display: flex;
+  position: relative;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  min-width: 100%;
+  padding-top: 4rem;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.carousel-item figure {
+  background: url('./images/pattern-bg.svg') no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 30rem;
+  padding: 2.6rem;
+  display: flex;
+  justify-content: center;
+}
+
+.carousel-item figure .avatar {
+  width: 65%;
+  height: 25rem;
+  box-shadow: 1rem 1rem 1rem rgba(109, 109, 201, 0.5);
+}
+
+.icons-container {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 30rem;
+  display: flex;
+  border-radius: 4rem;
+  overflow: hidden;
+}
+
+.icons-container button {
+  background: #fff;
+  padding: 2rem;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icons {
+  width: 1.5rem;
+}
+
+.content__info {
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background: url('./images/pattern-quotes.svg') no-repeat;
+  background-position: top center;
+  background-size: 5rem;
+}
+
+.content__info p:nth-child(1){
+  color: var(--Dark-Blue);
+  font-weight: 300;
+  font-size: 1.7rem;
+  padding-inline: 2rem;
+  text-align: center;
+}
+.content__info p:nth-child(2){
+  margin-block-start: 2rem;
+  color: var(--Dark-Blue);
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+.content__info p:nth-child(3){
+  color: var(--Grayish-Blue);
+  font-size: 1.3rem;
+  font-weight: 500;
 }
