--- a/src/style.css
+++ b/src/style.css
@@ -84,28 +84,124 @@ html {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   padding: 2rem;
   background: url('./images/pattern-quotes.svg') no-repeat;
   background-position: top center;
   background-size: 5rem;
 }
 
-.content__info p:nth-child(1){
+.content__info p:nth-child(1) {
   color: var(--Dark-Blue);
   font-weight: 300;
   font-size: 1.7rem;
   padding-inline: 2rem;
   text-align: center;
 }
-.content__info p:nth-child(2){
+
+.content__info p:nth-child(2) span:nth-child(1) {
   margin-block-start: 2rem;
   color: var(--Dark-Blue);
   font-weight: 700;
   font-size: 1.4rem;
+  text-align: center;
+  display: block;
 }
-.content__info p:nth-child(3){
+
+.content__info p:nth-child(2) span:nth-child(2) {
   color: var(--Grayish-Blue);
   font-size: 1.3rem;
   font-weight: 500;
+  text-align: center;
+  display: block;
+}
+
+.attribution {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 1.1rem;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 1024px) {
+  .item-container {
+    display: flex;
+    flex-direction: row-reverse;
+
+  }
+
+  .carousel-item figure {
+    width: 100%;
+    height: 100%;
+  }
+
+  .carousel-item figure .avatar {
+    width: 70%;
+    height: 35rem;
+    box-shadow: 1rem 2rem 1rem rgba(109, 109, 201, 0.5);
+  }
+
+  .icons-container {
+    left: initial;
+    transform: initial;
+    right: 30%;
+    top: 40rem;
+  }
+
+  .content__info {
+    justify-content: center;
+    margin-top: 0;
+    background-position: 10rem 10rem;
+    background-size: 6rem;
+  }
+
+  .content__info p:nth-child(1) {
+    color: var(--Dark-Blue);
+    font-weight: 300;
+    font-size: 2rem;
+    padding-inline: 2rem;
+    text-align: start;
+  }
+
+  .content__info p:nth-child(2) span:nth-child(1) {
+    font-size: 1.6rem;
+    display: inline-block;
+    margin-inline-start: 2rem;
+  }
+
+  .content__info p:nth-child(2) span:nth-child(2) {
+    font-size: 1.6rem;
+    display: inline-block;
+    margin-inline-start: 1rem;
+  }
+
+  .carousel {
+    background-size: 50rem;
+  }
+
+  .attribution {
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .content__info {
+    align-items: end;
+    background-position: 15rem 12rem;
+    background-size: 7rem;
+  }
+
+  .content__info p:nth-child(1) {
+    text-align: end;
+  }
+
 }
